--- a/index.html
+++ b/index.html
@@ -1,78 +1,485 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-    <title>Valorant Global Skill Index</title>
-    <style>
-        body {
-            font-family: Arial;
-            background: #0f1923;
-            color: white;
-            text-align: center;
-        }
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>AimForge — Global Skill Index</title>
 
-        table {
-            margin: auto;
-            border-collapse: collapse;
-            width: 80%;
-        }
+  <style>
+    :root{
+      --bg0:#070b12;
+      --bg1:#0b1020;
+      --card: rgba(255,255,255,.06);
+      --card2: rgba(255,255,255,.09);
+      --stroke: rgba(255,255,255,.12);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.65);
+      --brand1:#ff2d55;
+      --brand2:#7c3aed;
+      --brand3:#22c55e;
+      --shadow: 0 18px 60px rgba(0,0,0,.45);
+      --radius: 22px;
+    }
 
-        th, td {
-            padding: 10px;
-            border-bottom: 1px solid #333;
-        }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color:var(--text);
+      background:
+        radial-gradient(1200px 700px at 15% 10%, rgba(124,58,237,.28), transparent 55%),
+        radial-gradient(900px 600px at 85% 15%, rgba(255,45,85,.25), transparent 55%),
+        radial-gradient(1000px 700px at 40% 110%, rgba(34,197,94,.18), transparent 60%),
+        linear-gradient(180deg, var(--bg0), var(--bg1));
+      overflow-x:hidden;
+      cursor:none; /* custom cursor */
+    }
 
-        th {
-            background: #1f2731;
-        }
+    /* custom cursor */
+    .cursor, .cursor-dot{
+      position: fixed;
+      top:0; left:0;
+      pointer-events:none;
+      z-index:9999;
+      transform: translate(-50%,-50%);
+      mix-blend-mode: screen;
+    }
+    .cursor{
+      width: 42px; height: 42px;
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,.18);
+      background: radial-gradient(circle at 30% 30%, rgba(255,45,85,.20), rgba(124,58,237,.10), transparent 60%);
+      box-shadow: 0 0 40px rgba(255,45,85,.18);
+      transition: width .15s ease, height .15s ease, border-color .15s ease, background .15s ease;
+      backdrop-filter: blur(6px);
+    }
+    .cursor-dot{
+      width: 8px; height: 8px;
+      border-radius: 999px;
+      background: linear-gradient(135deg, var(--brand1), var(--brand2));
+      box-shadow: 0 0 22px rgba(255,45,85,.35);
+    }
+    .cursor.is-hover{
+      width: 64px; height: 64px;
+      border-color: rgba(255,255,255,.26);
+      background: radial-gradient(circle at 30% 30%, rgba(34,197,94,.18), rgba(124,58,237,.12), transparent 62%);
+    }
 
-        tr:hover {
-            background: #1a222c;
-        }
+    .wrap{
+      width:min(1100px, 92vw);
+      margin: 28px auto 70px;
+    }
 
-        .gsi {
-            color: #ff4655;
-            font-weight: bold;
-        }
-    </style>
+    header{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      gap:18px;
+      margin-bottom:18px;
+    }
+
+    .brand{
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+    }
+
+    .logo{
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+    }
+    .mark{
+      width:42px; height:42px;
+      border-radius: 14px;
+      background:
+        radial-gradient(circle at 30% 30%, rgba(255,45,85,.95), rgba(124,58,237,.75), rgba(34,197,94,.35));
+      box-shadow: 0 14px 40px rgba(255,45,85,.18);
+      border:1px solid rgba(255,255,255,.18);
+    }
+    h1{
+      margin:0;
+      font-size: clamp(22px, 2.4vw, 30px);
+      letter-spacing: .2px;
+      line-height: 1.15;
+    }
+    .sub{
+      margin:0;
+      color:var(--muted);
+      max-width: 62ch;
+      font-size: 14px;
+      line-height: 1.5;
+    }
+
+    .pillbar{
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      margin-top:10px;
+    }
+    .pill{
+      font-size:12px;
+      color: rgba(255,255,255,.78);
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.06);
+      padding:6px 10px;
+      border-radius: 999px;
+      backdrop-filter: blur(8px);
+    }
+    .pill strong{color: rgba(255,255,255,.92); font-weight:600}
+
+    .card{
+      background: var(--card);
+      border: 1px solid var(--stroke);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(14px);
+      overflow:hidden;
+    }
+
+    .controls{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      padding: 14px 14px;
+      border-bottom: 1px solid rgba(255,255,255,.10);
+      background: linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.02));
+    }
+
+    .input{
+      flex: 1 1 260px;
+      display:flex;
+      gap:10px;
+      align-items:center;
+      padding: 10px 12px;
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.20);
+    }
+    .input input{
+      width:100%;
+      border:0;
+      outline:none;
+      background:transparent;
+      color:var(--text);
+      font-size:14px;
+    }
+    .input input::placeholder{color: rgba(255,255,255,.45)}
+    .btn{
+      flex: 0 0 auto;
+      padding: 10px 12px;
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.18);
+      color: rgba(255,255,255,.86);
+      font-size: 13px;
+      cursor: none;
+      user-select:none;
+      transition: transform .12s ease, background .12s ease, border-color .12s ease;
+    }
+    .btn:hover{
+      transform: translateY(-1px);
+      background: rgba(255,255,255,.08);
+      border-color: rgba(255,255,255,.18);
+    }
+    .btn.primary{
+      background: linear-gradient(135deg, rgba(255,45,85,.95), rgba(124,58,237,.85));
+      border-color: rgba(255,255,255,.14);
+    }
+
+    .tablewrap{overflow:auto}
+    table{
+      width:100%;
+      border-collapse: collapse;
+      min-width: 820px;
+    }
+    thead th{
+      text-align:left;
+      font-size:12px;
+      letter-spacing:.12em;
+      text-transform:uppercase;
+      color: rgba(255,255,255,.62);
+      padding: 14px 16px;
+      background: rgba(0,0,0,.18);
+      position: sticky;
+      top:0;
+      backdrop-filter: blur(10px);
+      z-index: 2;
+    }
+    tbody td{
+      padding: 14px 16px;
+      border-top: 1px solid rgba(255,255,255,.08);
+      font-size: 14px;
+      color: rgba(255,255,255,.86);
+      white-space: nowrap;
+    }
+    tbody tr{
+      transition: background .12s ease;
+    }
+    tbody tr:hover{
+      background: rgba(255,255,255,.05);
+    }
+
+    .rank{
+      font-variant-numeric: tabular-nums;
+      color: rgba(255,255,255,.70);
+    }
+    .player{
+      display:flex;
+      align-items:center;
+      gap:10px;
+      max-width: 380px;
+    }
+    .badge{
+      width: 10px; height: 10px;
+      border-radius:999px;
+      background: linear-gradient(135deg, var(--brand1), var(--brand2));
+      box-shadow: 0 0 18px rgba(255,45,85,.25);
+      flex: 0 0 auto;
+    }
+    .name{
+      overflow:hidden;
+      text-overflow: ellipsis;
+    }
+    .muted{color: rgba(255,255,255,.62)}
+    .mono{font-variant-numeric: tabular-nums; font-feature-settings:"tnum" 1;}
+    .gsi{
+      font-weight:700;
+      color: transparent;
+      background: linear-gradient(135deg, var(--brand1), var(--brand2));
+      -webkit-background-clip: text;
+      background-clip: text;
+      text-align:right;
+    }
+    .right{text-align:right}
+
+    .footer{
+      margin-top:14px;
+      color: rgba(255,255,255,.50);
+      font-size: 12px;
+      line-height: 1.5;
+      padding: 0 6px;
+    }
+    .footer a{color: rgba(255,255,255,.72); text-decoration:none; border-bottom:1px solid rgba(255,255,255,.22)}
+    .footer a:hover{color: rgba(255,255,255,.92)}
+    .hr{
+      height:1px;
+      background: rgba(255,255,255,.10);
+      margin: 10px 0;
+    }
+
+    .toast{
+      position: fixed;
+      bottom: 18px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,.45);
+      border: 1px solid rgba(255,255,255,.12);
+      color: rgba(255,255,255,.86);
+      padding: 10px 12px;
+      border-radius: 14px;
+      backdrop-filter: blur(14px);
+      box-shadow: var(--shadow);
+      font-size: 13px;
+      display:none;
+      z-index: 9998;
+    }
+
+    @media (max-width: 720px){
+      table{min-width: 720px;}
+      .sub{max-width: 48ch}
+    }
+  </style>
 </head>
+
 <body>
+  <div class="cursor" id="cursor"></div>
+  <div class="cursor-dot" id="cursorDot"></div>
+  <div class="toast" id="toast"></div>
 
-<h1>Valorant Global Skill Index</h1>
+  <div class="wrap">
+    <header>
+      <div class="brand">
+        <div class="logo">
+          <div class="mark"></div>
+          <div>
+            <h1>AimForge — Global Skill Index</h1>
+            <p class="sub">
+              Performance-Ranking + Coaching. Aktuell Demo: Score basiert auf verfügbaren Ranked/Leaderboard-Daten.
+              Sobald Match-Stats freigeschaltet sind, erweitert AimForge den Score um echte Gameplay-Metriken.
+            </p>
+          </div>
+        </div>
 
-<table id="leaderboard">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Player</th>
-            <th>RR</th>
-            <th>Wins</th>
-            <th>GSI</th>
-        </tr>
-    </thead>
-    <tbody></tbody>
-</table>
+        <div class="pillbar">
+          <span class="pill"><strong>Demo</strong> • Leaderboard-basiert</span>
+          <span class="pill">Coming: Riot Login (RSO)</span>
+          <span class="pill">Coming: Coach Tips</span>
+          <span class="pill">EU Act: <span id="actId" class="muted">—</span></span>
+        </div>
+      </div>
+    </header>
 
-<script>
-fetch("http://127.0.0.1:8000/leaderboard?size=20")
-    .then(res => res.json())
-    .then(data => {
-        const tbody = document.querySelector("#leaderboard tbody");
+    <div class="card">
+      <div class="controls">
+        <div class="input" data-hover>
+          <span class="muted" style="font-size:13px;">🔎</span>
+          <input id="q" placeholder="Spieler suchen… (z.B. kozz, #tag, team)" />
+        </div>
 
-        data.players.forEach((p, index) => {
-            const row = document.createElement("tr");
+        <button class="btn" id="sortRR" data-hover>Sort: RR</button>
+        <button class="btn" id="sortWins" data-hover>Sort: Wins</button>
+        <button class="btn primary" id="sortGSI" data-hover>Sort: GSI</button>
+      </div>
 
-            row.innerHTML = `
-                <td>${index + 1}</td>
-                <td>${p.gameName}#${p.tagLine}</td>
-                <td>${p.rankedRating}</td>
-                <td>${p.wins}</td>
-                <td class="gsi">${p.gsi}</td>
-            `;
+      <div class="tablewrap">
+        <table>
+          <thead>
+            <tr>
+              <th style="width:70px;">#</th>
+              <th>Player</th>
+              <th class="right" style="width:120px;">RR</th>
+              <th class="right" style="width:120px;">Wins</th>
+              <th class="right" style="width:140px;">GSI</th>
+            </tr>
+          </thead>
+          <tbody id="rows">
+            <tr><td class="muted" colspan="5" style="padding:18px 16px;">Loading…</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
-            tbody.appendChild(row);
-        });
+    <div class="footer">
+      <div class="hr"></div>
+      <div>
+        <strong>Disclaimer:</strong> AimForge is not endorsed by Riot Games. No game client interaction, no memory reading, no Vanguard bypass.
+        <br/>
+        Product URL Demo (GitHub Pages). Backend will be deployed publicly in the next step.
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // ---------- Custom Cursor ----------
+    const cursor = document.getElementById("cursor");
+    const dot = document.getElementById("cursorDot");
+
+    let mx = window.innerWidth / 2, my = window.innerHeight / 2;
+    let cx = mx, cy = my;
+
+    window.addEventListener("mousemove", (e) => {
+      mx = e.clientX; my = e.clientY;
+      dot.style.left = mx + "px";
+      dot.style.top = my + "px";
     });
-</script>
 
+    function tick(){
+      cx += (mx - cx) * 0.12;
+      cy += (my - cy) * 0.12;
+      cursor.style.left = cx + "px";
+      cursor.style.top = cy + "px";
+      requestAnimationFrame(tick);
+    }
+    tick();
+
+    // hover grow
+    function setHover(on){ cursor.classList.toggle("is-hover", on); }
+    document.querySelectorAll("[data-hover]").forEach(el=>{
+      el.addEventListener("mouseenter", ()=>setHover(true));
+      el.addEventListener("mouseleave", ()=>setHover(false));
+    });
+
+    // ---------- UI ----------
+    const rowsEl = document.getElementById("rows");
+    const qEl = document.getElementById("q");
+    const actEl = document.getElementById("actId");
+    const toast = document.getElementById("toast");
+
+    function showToast(msg){
+      toast.textContent = msg;
+      toast.style.display = "block";
+      clearTimeout(showToast._t);
+      showToast._t = setTimeout(()=>toast.style.display="none", 2200);
+    }
+
+    let players = [];
+    let sortMode = "gsi"; // gsi | rr | wins
+
+    function normalize(s){ return (s||"").toString().toLowerCase().trim(); }
+
+    function render(){
+      const q = normalize(qEl.value);
+      let list = players.filter(p=>{
+        if(!q) return true;
+        const hay = normalize(`${p.gameName}#${p.tagLine} ${p.leaderboardRank} ${p.rankedRating} ${p.wins} ${p.gsi}`);
+        return hay.includes(q);
+      });
+
+      list.sort((a,b)=>{
+        if(sortMode==="rr") return (b.rankedRating||0) - (a.rankedRating||0);
+        if(sortMode==="wins") return (b.wins||0) - (a.wins||0);
+        return (b.gsi||0) - (a.gsi||0);
+      });
+
+      if(list.length === 0){
+        rowsEl.innerHTML = `<tr><td class="muted" colspan="5" style="padding:18px 16px;">Keine Treffer.</td></tr>`;
+        return;
+      }
+
+      rowsEl.innerHTML = list.map((p, idx)=>`
+        <tr data-hover>
+          <td class="rank mono">${idx+1}</td>
+          <td>
+            <div class="player">
+              <span class="badge"></span>
+              <span class="name">${p.gameName}<span class="muted">#${p.tagLine}</span></span>
+            </div>
+          </td>
+          <td class="right mono">${p.rankedRating ?? "-"}</td>
+          <td class="right mono">${p.wins ?? "-"}</td>
+          <td class="right mono gsi">${p.gsi ?? "-"}</td>
+        </tr>
+      `).join("");
+
+      // add hover grow to new rows
+      document.querySelectorAll("tbody tr[data-hover]").forEach(el=>{
+        el.addEventListener("mouseenter", ()=>setHover(true));
+        el.addEventListener("mouseleave", ()=>setHover(false));
+      });
+    }
+
+    // ---------- Data Load ----------
+    async function load(){
+      try{
+        // GitHub Pages Demo: expects gsi_top100.json in the repo root
+        const res = await fetch("gsi_top100.json", { cache: "no-store" });
+        if(!res.ok) throw new Error("Demo JSON not found yet (gsi_top100.json).");
+        const data = await res.json();
+
+        // Accept either {players:[...]} or [...]. We use the array format from build_gsi.py.
+        players = Array.isArray(data) ? data : (data.players || []);
+        actEl.textContent = "EU (Demo)";
+        showToast("Demo geladen ✔");
+        render();
+      }catch(err){
+        rowsEl.innerHTML = `<tr><td class="muted" colspan="5" style="padding:18px 16px;">
+          Konnte Demo-Daten nicht laden. Nächster Schritt: <code>gsi_top100.json</code> ins Repo hochladen.
+          <br/><span style="opacity:.6">${err.message}</span>
+        </td></tr>`;
+        actEl.textContent = "—";
+        showToast("Demo fehlt (gsi_top100.json)");
+      }
+    }
+
+    // Controls
+    qEl.addEventListener("input", render);
+    document.getElementById("sortRR").addEventListener("click", ()=>{ sortMode="rr"; showToast("Sort: RR"); render(); });
+    document.getElementById("sortWins").addEventListener("click", ()=>{ sortMode="wins"; showToast("Sort: Wins"); render(); });
+    document.getElementById("sortGSI").addEventListener("click", ()=>{ sortMode="gsi"; showToast("Sort: GSI"); render(); });
+
+    load();
+  </script>
 </body>
 </html>
