--- a/index.html
+++ b/index.html
@@ -352,14 +352,22 @@
     </div>
 
     <div class="footer">
-      <div class="hr"></div>
-      <div>
-        <strong>Disclaimer:</strong> AimForge is not endorsed by Riot Games. No game client interaction, no memory reading, no Vanguard bypass.
-        <br/>
-        Product URL Demo (GitHub Pages). Backend will be deployed publicly in the next step.
-      </div>
+    <div style="margin-bottom:8px;">
+        <strong>Disclaimer:</strong> AimForge is not endorsed by Riot Games.
+        AimForge is a read-only analytics product and does not interact with the game client, does not read memory, and does not bypass Vanguard.
     </div>
-  </div>
+
+    <div style="opacity:.85;">
+        Riot Games, VALORANT, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
+    </div>
+
+    <div style="margin-top:10px;">
+        <a href="privacy.html" style="color:rgba(255,255,255,.8);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.25);">
+            Privacy Policy
+        </a>
+    </div>
+</div>
+
 
   <script>
     // ---------- Custom Cursor ----------
@@ -483,3 +491,4 @@
   </script>
 </body>
 </html>
+
