--- a/index.html
+++ b/index.html
@@ -351,11 +351,16 @@
       </div>
     </div>
 
-    <div class="footer">
-    <div style="margin-bottom:8px;">
-        <strong>Disclaimer:</strong> AimForge is not endorsed by Riot Games.
-        AimForge is a read-only analytics product and does not interact with the game client, does not read memory, and does not bypass Vanguard.
-    </div>
+    <div style="margin-top:10px;">
+    <a href="privacy.html" style="color:rgba(255,255,255,.8);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.25);margin-right:15px;">
+        Privacy Policy
+    </a>
+
+    <a href="terms.html" style="color:rgba(255,255,255,.8);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.25);">
+        Terms of Service
+    </a>
+</div>
+
 
     <div style="opacity:.85;">
         Riot Games, VALORANT, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
@@ -491,4 +496,5 @@
   </script>
 </body>
 </html>
+
 
