--- a/index.html
+++ b/index.html
@@ -362,16 +362,10 @@
 </div>
 
 
-    <div style="opacity:.85;">
-        Riot Games, VALORANT, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
-    </div>
-
-    <div style="margin-top:10px;">
-        <a href="privacy.html" style="color:rgba(255,255,255,.8);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.25);">
-            Privacy Policy
-        </a>
-    </div>
+<div style="opacity:.85;margin-top:8px;">
+    Riot Games, VALORANT, and all associated properties are trademarks or registered trademarks of Riot Games, Inc.
 </div>
+
 
 
   <script>
@@ -496,5 +490,6 @@
   </script>
 </body>
 </html>
+
 
 
