--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AimForge — Global Skill Index</title>
+  <title>AimForge — Performance Insights (EU Demo)</title>
 
   <style>
     :root{
@@ -490,6 +490,7 @@
   </script>
 </body>
 </html>
+
 
 
 
