--- a/index.html
+++ b/index.html
@@ -304,11 +304,15 @@
         <div class="logo">
           <div class="mark"></div>
           <div>
-            <h1>AimForge — Global Skill Index</h1>
-            <p class="sub">
-              Performance-Ranking + Coaching. Aktuell Demo: Score basiert auf verfügbaren Ranked/Leaderboard-Daten.
-              Sobald Match-Stats freigeschaltet sind, erweitert AimForge den Score um echte Gameplay-Metriken.
-            </p>
+            <h1>AimForge — Performance Insights (EU Demo)</h1>
+
+<p class="sub">
+    EU Demo powered by official Riot Act leaderboard data.
+    AimForge provides read-only performance insights and coaching analytics.
+    Any rankings shown are community-based and opt-in only —
+    not an alternative to Riot’s official ranked ladder.
+</p>
+
           </div>
         </div>
 
@@ -490,6 +494,7 @@
   </script>
 </body>
 </html>
+
 
 
 
