--- a/index.html
+++ b/index.html
@@ -317,11 +317,12 @@
         </div>
 
         <div class="pillbar">
-          <span class="pill"><strong>Demo</strong> • Leaderboard-basiert</span>
-          <span class="pill">Coming: Riot Login (RSO)</span>
-          <span class="pill">Coming: Coach Tips</span>
-          <span class="pill">EU Act: <span id="actId" class="muted">—</span></span>
-        </div>
+    <span class="pill"><strong>Region:</strong> EU</span>
+    <span class="pill"><strong>Mode:</strong> Leaderboard Demo</span>
+    <span class="pill">Coming: Riot Login (RSO)</span>
+    <span class="pill">EU Act: <span id="actId" class="muted">—</span></span>
+</div>
+
       </div>
     </header>
 
@@ -494,6 +495,7 @@
   </script>
 </body>
 </html>
+
 
 
 
