--- a/index.html
+++ b/index.html
@@ -298,6 +298,22 @@
   <div class="cursor-dot" id="cursorDot"></div>
   <div class="toast" id="toast"></div>
 
+  <!-- NAVIGATION START -->
+  <nav style="width:min(1100px,92vw);margin:18px auto 0;display:flex;gap:14px;align-items:center;justify-content:space-between;">
+    <div style="display:flex;gap:12px;align-items:center;">
+      <a href="./index.html" style="color:rgba(255,255,255,.9);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.22);">Demo</a>
+      <a href="./community.html" style="color:rgba(255,255,255,.78);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.22);">Community Ladder (EU)</a>
+      <a href="./dashboard.html" style="color:rgba(255,255,255,.78);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.22);">My Stats (Login)</a>
+    </div>
+
+    <div style="display:flex;gap:10px;align-items:center;">
+      <span style="font-size:12px;color:rgba(255,255,255,.55);">Coach tips require Riot Login (RSO)</span>
+      <a href="./dashboard.html" style="padding:8px 12px;border-radius:14px;border:1px solid rgba(255,255,255,.14);background:rgba(0,0,0,.18);color:rgba(255,255,255,.9);text-decoration:none;">
+        Login
+      </a>
+    </div>
+  </nav>
+
   <div class="wrap">
     <header>
       <div class="brand">
@@ -495,6 +511,7 @@
   </script>
 </body>
 </html>
+
 
 
 
