--- a/dashboard.html
+++ b/dashboard.html
@@ -6,57 +6,108 @@
 <title>AimForge — My Stats (Login)</title>
 <style>
   :root{
-    --bg0:#070b12; --bg1:#0b1020;
-    --card:rgba(255,255,255,.06);
-    --stroke:rgba(255,255,255,.12);
-    --muted:rgba(255,255,255,.65);
-    --text:rgba(255,255,255,.92);
+    --bg0:#0f1115;
+    --bg1:#121622;
+    --card:#171a21;
+    --stroke:rgba(255,255,255,.08);
+    --text:#e6e9ef;
+    --muted:#9aa3b2;
+    --accent:#ff4655;
+    --shadow:0 18px 60px rgba(0,0,0,.45);
+    --radius:18px;
   }
+
   *{box-sizing:border-box}
   body{
-    margin:0;font-family:system-ui,Segoe UI,Roboto,Arial;color:var(--text);
-    background:
-      radial-gradient(900px 600px at 15% 10%, rgba(124,58,237,.28), transparent 55%),
-      radial-gradient(900px 600px at 85% 15%, rgba(255,45,85,.25), transparent 55%),
-      linear-gradient(180deg,var(--bg0),var(--bg1));
-    min-height:100vh;
+    margin:0;
+    font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+    color:var(--text);
+    background: radial-gradient(1200px 700px at 20% 0%, rgba(255,70,85,.06), transparent 55%),
+                linear-gradient(180deg, var(--bg0), var(--bg1));
     padding:28px 16px;
   }
-  .nav{max-width:1100px;margin:0 auto 18px;display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
-  .nav a{color:rgba(255,255,255,.85);text-decoration:none;border-bottom:1px solid rgba(255,255,255,.22)}
+
   .wrap{max-width:1100px;margin:0 auto}
-  .hero{display:flex;justify-content:space-between;align-items:flex-end;gap:18px;flex-wrap:wrap;margin-bottom:14px}
+
   h1{margin:0;font-size:28px}
-  .sub{margin:6px 0 0;color:var(--muted);max-width:780px;line-height:1.5}
+  h2{margin:0;font-size:16px}
+
+  .nav{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    margin-bottom:20px;
+    flex-wrap:wrap;
+    gap:10px;
+  }
+
+  .nav a{
+    color:var(--muted);
+    text-decoration:none;
+    font-size:13px;
+  }
+
+  .nav a:hover{color:var(--text)}
+
   .btn{
-    padding:10px 14px;border-radius:14px;border:1px solid var(--stroke);
-    background:rgba(0,0,0,.18);color:rgba(255,255,255,.92);
-    text-decoration:none;display:inline-flex;gap:8px;align-items:center
+    padding:8px 12px;
+    border-radius:12px;
+    border:1px solid var(--stroke);
+    background:rgba(255,255,255,.03);
+    color:var(--text);
+    text-decoration:none;
+    font-size:13px;
   }
-  .btn.primary{background:linear-gradient(135deg,#ff2d55,#7c3aed);border-color:transparent}
-  .grid{display:grid;grid-template-columns:1.15fr .85fr;gap:14px}
-  @media (max-width: 940px){.grid{grid-template-columns:1fr}}
+
+  .btn.primary{
+    border-color:rgba(255,70,85,.25);
+    background:rgba(255,70,85,.10);
+  }
+
   .card{
-    background:var(--card);border:1px solid var(--stroke);border-radius:18px;
-    box-shadow:0 18px 60px rgba(0,0,0,.45);backdrop-filter: blur(12px);
-    padding:14px 14px;
+    background:rgba(23,26,33,.75);
+    border:1px solid var(--stroke);
+    border-radius:var(--radius);
+    box-shadow:var(--shadow);
+    padding:16px;
+    margin-top:14px;
   }
-  .kpi{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-top:10px}
-  @media (max-width: 720px){.kpi{grid-template-columns:1fr}}
-  .k{padding:12px;border-radius:16px;border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14)}
-  .k .label{font-size:12px;color:rgba(255,255,255,.6);letter-spacing:.08em;text-transform:uppercase}
-  .k .val{margin-top:6px;font-size:22px;font-weight:800}
-  .pill{display:inline-flex;gap:8px;align-items:center;padding:6px 10px;border:1px solid rgba(255,255,255,.12);border-radius:999px;background:rgba(0,0,0,.12);color:rgba(255,255,255,.82);font-size:12px}
-  .list{margin:10px 0 0;padding:0;list-style:none;display:flex;flex-direction:column;gap:10px}
+
+  .grid{
+    display:grid;
+    grid-template-columns:repeat(4,1fr);
+    gap:14px;
+  }
+
+  @media (max-width:950px){
+    .grid{grid-template-columns:1fr}
+  }
+
+  .klabel{
+    font-size:11px;
+    letter-spacing:.12em;
+    text-transform:uppercase;
+    color:var(--muted);
+  }
+
+  .kval{
+    margin-top:6px;
+    font-size:22px;
+    font-weight:800;
+  }
+
+  .kval.accent{color:var(--accent)}
+
+  .muted{color:var(--muted);font-size:13px;line-height:1.5}
+
   .tip{
-    border:1px solid rgba(255,255,255,.10);background:rgba(0,0,0,.14);
-    border-radius:16px;padding:12px 12px
+    border-top:1px solid rgba(255,255,255,.06);
+    padding-top:12px;
+    margin-top:12px;
   }
-  .tip h3{margin:0 0 6px;font-size:14px}
-  .tip p{margin:0;color:rgba(255,255,255,.68);line-height:1.45}
-  .note{margin-top:12px;color:rgba(255,255,255,.55);font-size:12px}
-  code{background:rgba(0,0,0,.35);padding:2px 6px;border-radius:8px;border:1px solid rgba(255,255,255,.10)}
+
 </style>
+
 </head>
 <body>
   <div class="nav">
