--- a/dashboard.html
+++ b/dashboard.html
@@ -119,19 +119,59 @@
     <a class="btn" href="./privacy.html">Privacy</a>
   </div>
 
-  <div class="wrap">
-    <div class="hero">
-      <div>
-        <h1>My Stats & Coach</h1>
-        <p class="sub">
-          Sign in with Riot (RSO) to view your authorized stats and receive personalized coaching tips.
-          This feature is <strong>opt-in</strong>, read-only, and does not interact with the VALORANT client.
-        </p>
-      </div>
-      <!-- placeholder until RSO is enabled -->
-      <a class="btn primary" href="#" onclick="alert('RSO will be enabled after production approval. This page demonstrates the planned user flow.'); return false;">
-        Login with Riot (Coming Soon)
-      </a>
+  <h1>Performance Overview</h1>
+<p class="muted">Example Profile • EU Demo</p>
+
+<div class="grid">
+
+  <div class="card">
+    <div class="klabel">GSI Score</div>
+    <div class="kval accent">842</div>
+    <div class="muted">Community Performance Rating</div>
+  </div>
+
+  <div class="card">
+    <div class="klabel">Aim Efficiency</div>
+    <div class="kval">32 / 100</div>
+    <div class="muted">Headshot accuracy & first bullet precision</div>
+  </div>
+
+  <div class="card">
+    <div class="klabel">Impact Rating</div>
+    <div class="kval">61 / 100</div>
+    <div class="muted">Damage contribution & round influence</div>
+  </div>
+
+  <div class="card">
+    <div class="klabel">Consistency Index</div>
+    <div class="kval">48 / 100</div>
+    <div class="muted">Performance stability over matches</div>
+  </div>
+
+</div>
+
+<div class="card">
+  <h2>Headshot Analysis</h2>
+  <p class="muted">
+    Current HS Rate: 4% <br>
+    Radiant Benchmark: 22–28%
+  </p>
+
+  <div class="tip">
+    <strong>Identified Issue:</strong><br>
+    Crosshair placement below head level during angle clearing.
+  </div>
+
+  <div class="tip">
+    <strong>Training Protocol:</strong><br>
+    15 min Range (one-taps only) + 2 Sheriff Deathmatches daily.
+  </div>
+
+  <div class="tip">
+    <strong>Target Goal:</strong><br>
+    Reach 10% within 14 days.
+  </div>
+
     </div>
 
     <div class="grid">
