--- a/dashboard.html
+++ b/dashboard.html
@@ -174,14 +174,56 @@
 
     </div>
 
-    <div class="grid">
-      <div class="card">
-        <div style="display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap;">
-          <div>
-            <div style="font-size:12px;color:rgba(255,255,255,.6);text-transform:uppercase;letter-spacing:.12em;">Example profile (preview)</div>
-            <div style="font-size:18px;font-weight:800;margin-top:4px;">Maurice<span style="color:rgba(255,255,255,.6)">#FPS</span></div>
-          </div>
-          <span class="pill">Region: EU</span>
+   <div class="grid" style="grid-template-columns: 1.2fr .8fr;">
+  <div class="card">
+    <h2>Engagement Profile</h2>
+    <p class="muted">
+      This section will be generated from authorized match stats (post-login).
+      For the demo, it illustrates the structure AimForge will provide.
+    </p>
+
+    <div class="tip">
+      <strong>Fight Selection</strong><br>
+      Avoid isolated duels. AimForge flags rounds where you took fights without trade potential.
+    </div>
+
+    <div class="tip">
+      <strong>First Bullet Discipline</strong><br>
+      We’ll measure “first shot accuracy windows” and recommend sensitivity & burst habits.
+    </div>
+
+    <div class="tip">
+      <strong>Utility Timing</strong><br>
+      We’ll detect low-utility rounds and suggest agent-specific routines (entry / retake).
+    </div>
+  </div>
+
+  <div class="card">
+    <h2>Weekly Improvement Plan</h2>
+    <p class="muted">Personalized after login • Example plan</p>
+
+    <div class="tip">
+      <strong>Daily (20–30 min)</strong><br>
+      • 10 min Range one-taps<br>
+      • 2× DM: Sheriff/Vandal only, no spray<br>
+      • 5 min crosshair placement review (VOD or checklist)
+    </div>
+
+    <div class="tip">
+      <strong>Ranked Focus</strong><br>
+      • Take fights only with trade setup<br>
+      • Pre-aim common angles before peeking<br>
+      • No crouch-spray in first duel
+    </div>
+
+    <div class="tip">
+      <strong>Goal</strong><br>
+      HS% → 10% in 14 days<br>
+      Aim Efficiency → 45/100 next milestone
+    </div>
+  </div>
+</div>
+
         </div>
 
         <div class="kpi">
